correct spacing btw image and txt

--- a/task-3/css/style.css
+++ b/task-3/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 #logo-container img {
   height: 60px;
-  margin-right: 15px;
+  margin-right: 5px;
 }
 #logo-container h2 {
   display: inline-block;
